Fix button message and button alignment

--- a/src/sass/_common/header.scss
+++ b/src/sass/_common/header.scss
@@ -480,7 +480,7 @@ body .header {
             color: var(--text-general) !important;
             margin: 8px 0 0 auto;
             height: 24px !important;
-            float: right;
+            float: left;
             font-size: $FONT_SIZE_XS;
         }
         > img {
